# cs_computer_vision

./: .gitignore  .gitmodules  CMakeLists.txt
core/: CMakeLists.txt
core/include/cuda/testing/: LCudaTesting.h
core/include/cuda/transforms/: LCudaAffineTransforms.h
core/include/gpu/: LGpuManager.h
core/include/imgproc/globalproc/: LHistogram.h
core/include/transforms/: LAffineTransforms.h
core/include/visualizer/: LVisualizerManager.h
core/include/visualizer/gtk/: LWindowGtk.h
core/src/cuda/transforms/: LCudaAffineTransforms.cu
core/src/gpu/: LGpuManager.cpp
core/src/imgproc/globalproc/: LHistogram.cpp  LThresholding.cpp
core/src/transforms/: LFourierTransform.cpp
core/src/visualizer/: LVisualizerManager.cpp
core/src/visualizer/gtk/: LWindowGtk.cpp
felix/: .gitignore  CMakeLists.txt  LCommon.h
felix/core/: CMakeLists.txt  LCommon.h  LGpuMat.h  LMat.h
felix/core/include/cuda/imgproc/: LCudaConvolution.h
felix/core/include/cuda/testing/: LCudaTesting.h
felix/core/include/cuda/transforms/: LCudaAffineTransforms.h
felix/core/include/gpu/: LGpuCudaHandler.h  LGpuManager.h
felix/core/include/imgproc/globalproc/: LHistogram.h  LThresholding.h
felix/core/include/imgproc/localproc/: LConvolution.h  LMedianFilter.h
felix/core/include/loaders/: LLoaderBitmap.h
felix/core/include/mat/: LCudaMat.h  LGpuMat.h  LMat.h
felix/core/include/transforms/: LAffineTransforms.h  LFourierTransform.h
felix/core/include/utils/: LUtils.h
felix/core/include/visualizer/: LAbstractWindow.h  LVisualizer.h  LVisualizerManager.h
felix/core/include/visualizer/gtk/: LVisualizerGtk.h  LWindowGtk.h
felix/core/src/cuda/testing/: LCudaTesting.cu
felix/core/src/cuda/transforms/: LCudaAffineTransforms.cu
felix/core/src/gpu/: LGpuCudaHandler.cpp  LGpuManager.cpp
felix/core/src/imgproc/globalproc/: LHistogram.cpp
felix/core/src/imgproc/localproc/: LConvolution.cpp  LMedianFilter.cpp
felix/core/src/mat/: LCudaMat.cpp
felix/core/src/transforms/: LAffineTransforms.cpp  LFourierTransform.cpp
felix/core/src/utils/: LUtils.cpp
felix/core/src/visualizer/: LVisualizerManager.cpp
felix/core/src/visualizer/gtk/: LVisualizerGtk.cpp  LWindowGtk.cpp
felix/qt/felixVis/: CMakeLists.txt  felixVis  felixVis.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
felix/qt/felixVis/felixVis_autogen/: moc_predefs.h  mocs_compilation.cpp
felix/qt/felixVis/felixVis_autogen/EWIEGA46WW/: moc_mainwindow.cpp
felix/qt/felixVis/felixVis_autogen/UYX5XTB5RZ/: moc_lpanelaffinetransforms.cpp  moc_lpanelconvolution.cpp  moc_lpanelmedianfilter.cpp
felix/qt/felixVis/felixVis_autogen/include/: ui_lpanelaffinetransforms.h  ui_lpanelconvolution.h  ui_mainwindow.h
felix/qt/felixVis/include/qtUtils/: LQtUtils.h
felix/qt/felixVis/include/qtWrappers/: LWrapperAffineTransforms.h  LWrapperLocalProc.h
felix/qt/felixVis/include/windowWidgets/: LRenderArea.h
felix/qt/felixVis/src/qtUtils/: LQtUtils.cpp
felix/qt/felixVis/src/qtWrappers/: LWrapperFourierTransform.cpp  LWrapperLocalProc.cpp
felix/qt/felixVis/src/windowWidgets/: LRenderArea.cpp
felix/qt/felixVis/ui/: lpanelaffinetransforms.cpp  lpanelaffinetransforms.h  lpanelaffinetransforms.ui  lpanelfouriertransform.cpp  lpanelfouriertransform.h  lpanelfouriertransform.ui  lpanelmedianfilter.cpp  lpanelmedianfilter.ui
felix/tests/: CMakeLists.txt  leo_scaled  test_bmap.cpp  test_cimg.cpp  test_convolution.cpp  test_full.cpp  test_full_gpu.cpp  test_gtk.cpp  test_histogram.cpp  test_lmat.cpp  test_noise.cpp  test_thresholding.cpp  test_visualizer.cpp
felix/tools/: dependencies_installer.sh
qt/felixVis/: .gitignore  CMakeLists.txt  felixVis.pro  main.cpp  mainwindow.h
qt/felixVis/felixVis_autogen/: mocs_compilation.cpp
qt/felixVis/felixVis_autogen/EWIEGA46WW/: moc_mainwindow.cpp
qt/felixVis/felixVis_autogen/UYX5XTB5RZ/: moc_lpanelconvolution.cpp  moc_lpanelfouriertransform.cpp  moc_lpanelhistogramequalization.cpp
qt/felixVis/felixVis_autogen/include/: ui_lpanelfouriertransform.h  ui_lpanelhistogramequalization.h  ui_lpanelmedianfilter.h  ui_mainwindow.h
qt/felixVis/include/qtWrappers/: LWrapperFourierTransform.h  LWrapperGlobalProc.h  LWrapperLocalProc.h
qt/felixVis/include/windowWidgets/: LKernelWidget.h
qt/felixVis/src/qtWrappers/: LWrapperAffineTransforms.cpp  LWrapperGlobalProc.cpp
qt/felixVis/src/windowWidgets/: LKernelWidget.cpp  LRenderArea.cpp
qt/felixVis/ui/: lpanelaffinetransforms.cpp  lpanelaffinetransforms.h  lpanelconvolution.cpp  lpanelconvolution.h  lpanelconvolution.ui  lpanelhistogramequalization.cpp  lpanelhistogramequalization.h  lpanelhistogramequalization.ui  lpanelmedianfilter.h
res/: test_ft.m
tests/: CMakeLists.txt  leo_rotated  test_bmap.cpp  test_bmap_gpu.cpp  test_cimg.cpp  test_fourier_transform.cpp  test_fourier_transform_2.cpp  test_full_gpu.cpp  test_gpu.cpp  test_gtk.cpp  test_gtkmm.cpp  test_thresholding.cpp
